clusters/building-blocks/monitoring/apps/grafana/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: grafana
          namespace: monitoring
          passHostHeader: true
          port: 80
          scheme: http
